# video_0211

./: .gitignore  README.md  app.py  models.py  pyproject.toml  terms.json  transcribe_video.py  transcribe_video_groq.py
src/sec_trans/: __init__.py
templates/: index.html  login.html
