[project]
name = "sec-trans"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "koitsuzu", email = "qui0507for@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mistralai>=1.12.0",
    "moviepy>=2.2.1",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
