[project]
name = "sec-trans"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "koitsuzu", email = "qui0507for@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.7",
    "fastapi>=0.128.8",
    "groq>=1.0.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "mistralai>=1.12.0",
    "moviepy>=2.2.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.33",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
